web: only show edit/delete button when logged in

--- a/web/views/book.ejs
+++ b/web/views/book.ejs
@@ -3,7 +3,9 @@
   <p><%= book.author %></p>
   <h2><%= book.title %></h2>
   <p><%= book.details %></p>
+  <% if (user) { %>
   <a href="/deletebook/<%= book.id %>"><button type="button">Delete</button></a>
   <a href="/editbook/<%= book.id %>"><button type="button">Edit</button></a>
+  <% } %>
 </article>
 <%- include("foot") -%>
